[project]
name = "linton"
version = "0.9.1"
description = "Simple standalone static web site builder using Markdown"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/linton"}
requires-python = ">= 3.9"
dependencies = [
    "importlib_resources >= 5.10",
    "pyxdg",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
linton = "linton:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = [
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "linton",
    "linton.subcommand",
]

[tool.setuptools.package-data]
linton = ["init-pages/**"]

[tool.mypy]
exclude = ['^dist', '^build', '^linton/init-pages', '^tests/test-files']
strict = true

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "D415", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
