[project]
name = "linton"
version = "1.8.0"
description = "Simple standalone static web site builder using Markdown"
license = "GPL-3.0-or-later"
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"},
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/linton"}
requires-python = ">= 3.13"
dependencies = [
    "linkchecker",
    "nancy ~= 12.0",
    "mistletoe",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
linton = "linton:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = [
    "build",
    "setuptools",
]

[tool.setuptools]
packages = [
    "linton",
    "linton.subcommand",
]

[tool.setuptools.package-data]
linton = ["init-pages/**"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "D415", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
